change app secret

--- a/webServer/package.json
+++ b/webServer/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "node-alidayu": "^1.0.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
     "urllib": "^2.25.1"
   }
