--- a/webServer/package.json
+++ b/webServer/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "http": "0.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
