--- a/webServer/package.json
+++ b/webServer/package.json
@@ -10,17 +10,22 @@
     "alidayu-node": "^1.0.3",
     "alidayujs": "^1.0.5",
     "body-parser": "~1.18.2",
+    "connect-multiparty": "^2.1.0",
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "^2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "form-data": "^2.3.2",
     "formidable": "^1.1.1",
     "http": "0.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "multiparty": "^4.1.3",
     "mysql": "^2.15.0",
     "node-alidayu": "^1.0.0",
+    "node-uuid": "^1.4.8",
     "node-xlsx": "^0.11.2",
     "qr-image": "^3.2.0",
     "request": "^2.83.0",
